--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,14 @@
 title: Jimmy's homepage
 description: GitHub Pages example for promoting a project
 github_username: joklar93
-remote_theme: pages-themes/merlot@v0.2.0
+remote_theme: joklar93/merlot@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
+
+markdown: kramdown
+kramdown:
+  input: GFM
+
+# Specify the custom CSS file to load
+include:
+  - assets/custom.css
