--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ description: GitHub Pages example for promoting a project
 github_username: joklar93
 remote_theme: joklar93/merlot@v0.2.0
 plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
+- jekyll-remote-theme # add this line to the plugins list if you already have one g
