--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Jimmy's homepage
+title: joklar93 homepage
 description: GitHub Pages example for promoting a project
 github_username: joklar93
-remote_theme: joklar93/merlot@v0.2.0
+remote_theme: pages-themes/merlot@v0.2.0
 plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one g
+- jekyll-remote-theme # add this line to the plugins list if you already have one
