--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Dataman Calculator
-description: GitHub Pages example for promoting a project
+title: The Dataman
+description: A handheld math tutor for your child
 github_username: joklar93
 remote_theme: pages-themes/merlot@v0.2.0
 plugins:
